Debuging methods deleted
